fixing bugs with calculating nutrients and mapping